ulltimas modificaciones en el responsive del feature

--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
 
     <div class="cont-left"></div>
     <div class="cont-right">
-      <form action="enviar.php" method="POST">
+      <form action="" method="POST">
           <br>
           <label for="nombre">Nombre</label>
-          <input type="text" class="casilla" placeholder="Escribe tu nombre" required>
+          <input type="text" class="casilla" name="nombre" placeholder="Escribe tu nombre" required>
           <br>
           <label for="apellido">Apellido</label>
-          <input type="text" class="casilla" placeholder="Escribe tu apellido" required>
+          <input type="text" class="casilla" name="apellido" placeholder="Escribe tu apellido" required>
           <br>
           <label for="email">Correo</label>
           <input type="email" name="email" id="email" class="casilla" placeholder="Escribe tu correo" required>
