cambios para blog

--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
         <form action="" method="POST">
             <h4>Ingresa a tu cuenta</h4>
             <label for="user">usuario</label>
-            <input type="text" placeholder="escibe tu usuario" required>
+            <input type="text" placeholder="escribe tu usuario" required>
             <label for="password">contraseña</label>
             <input type="password" placeholder="escribe tu contraseña" required>
             <input type="submit" class="button1">
