recupero de index.html

--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <section class="blog">
+        <div class="fondo"></div>
         <h1>Blog</h1>
     </section>
+    
     
 </body>
 </html>
