--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="feature feature8"><p>Veganas</p></div>
       <div class="feature feature9"><p>Libre de Carne Vacunas</p></div>
       <div class="feature feature10"><p>Porcinas</p></div>
-      <div class="feature feature11"><p>Tawe Away</p></div>
+      <div class="feature feature11"><p>Take Away</p></div>
     </section>
     <!-- feature - fin -->
 
